Fix footer spacing on landing page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,6 +64,11 @@
     /* Margin bottom by footer height */
     margin-bottom: 280px;
   }
+
+  .body-landing {
+    margin-bottom: 240px;
+  }
+
   .footer {
     position: absolute;
     bottom: 0;
